# revshell

./: .gitignore  LICENSE  README.md  pyproject.toml
revshell/: __init__.py  cli.py  shells.py
