[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offseckit-revshell"
version = "0.1.0"
description = "Reverse shell generator CLI — generate one-liners in 12+ languages"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "OffSecKit", email = "dev@offseckit.com" }]
keywords = [
    "reverse-shell",
    "pentesting",
    "offensive-security",
    "red-team",
    "bug-bounty",
    "hacking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["click>=8.0"]

[project.scripts]
revshell = "revshell.cli:main"

[project.urls]
Homepage = "https://offseckit.com/tools/revshell"
Repository = "https://github.com/offseckit/revshell"
